CSS updated to fix cards being squished

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -34,6 +34,7 @@ width:600px;
 
 .card {
     max-width: 100%;
+    width: 100%;
     min-width: 8rem;
 }
 
